# StudyMate

./: .gitignore  README.md  db.sqlite3  manage.py  project_structure  pyproject.toml  render.yaml  requirements.txt  vercel.json
notes/: admin.py  models.py  urls.py  views.py
notes/management/commands/: backup_data.py  export_data.py  restore_data.py
notes/migrations/: 0001_initial.py  0002_alter_subject_options_subject_image.py  0003_chapter_image_alter_chapter_name.py
static/css/: style.css
studymate/: asgi.py  settings.py  urls.py  wsgi.py
templates/: add_note.html  base.html  home.html  login.html  quantum.html  signup.html  subject_notes.html  year_notes.html  year_view.html
