[tool.poetry]
name = "studymate"
version = "0.1.0"
description = "Your project description"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
sqlalchemy = "^2.0.0"
python-dotenv = "^1.0.0"
flask-sqlalchemy = "^3.1.0"
flask-login = "^0.6.3"
# Add any other dependencies your project uses

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 